// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Text component resized 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 3.25rem;
  line-height: 3.75rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`A Text component transformed 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  text-align: left;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`A Text component tuncated 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`A Text component weight 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
  text-transform: none;
  text-align: left;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`A Text component with variant 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<div
  className="c0"
  variant="critical"
>
  🥑
</div>
`;

exports[`A code Text component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<code
  className="c0"
>
  🥑
</code>
`;

exports[`A default Text component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`A span Text component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<span
  className="c0"
>
  🥑
</span>
`;
